--- a/blogs/blog-2/index.css
+++ b/blogs/blog-2/index.css
@@ -3,6 +3,15 @@
   padding: 0;
   box-sizing: none;
 }
+
+a,
+a:link,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
 body {
   font-size: 10px;
 }
