update required changes

--- a/blogs/blog-1/css/index.css
+++ b/blogs/blog-1/css/index.css
@@ -1,10 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-.body {
-  font-size: 10px;
-}
+@import url("./base.css");
 .header {
   margin-top: 3px;
   width: 100%;
