--- a/blogs/blog-2/static/css/index.css
+++ b/blogs/blog-2/static/css/index.css
@@ -1,17 +1,5 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: none;
-}
+@import url("./base.css");
 
-a,
-a:link,
-a:visited,
-a:hover,
-a:active {
-  text-decoration: none;
-  color: inherit;
-}
 body {
   font-size: 10px;
 }
